# graduate-work

./: .gitignore  ADVANCED_ROADMAP.md  CH6_ANNOTATION_UPDATE_REPORT.md  CH6_EXPERIMENT_REVIEW.md  COMPLEX_MANUFACTURED_EXPERIMENT_REPORT.md  DEFENSE_PPT_OUTLINE.md  EXPERIMENT6_ROLLBACK_REPORT.md  EXPERIMENT6_VISUAL_REDESIGN_REPORT.md  EXPERIMENT_AUDIT.md  EXPERIMENT_EVIDENCE_MATRIX.md  FIG10_FINAL_VISUAL_POLISH_REPORT.md  FIG16_PRESENTATION_PATCH_REPORT.md  FINAL_COMPLEX_VISUALIZATION_INTEGRATION_REPORT.md  FINAL_PATCH_AND_THEORY_CHECK_REPORT.md  FINAL_POLISH_REPORT.md  FINAL_Q1_Q7_MINIMAL_PATCH_REPORT.md  FINAL_Q8_Q15_AUDIT_PATCH_REPORT.md  FINAL_REVISION_AFTER_PRO_REPORT.md  FINAL_REVISION_REPORT.md  FORMULA_AUDIT_MATRIX.md  FORMULA_AUDIT_REPORT.md  LEAN_PROOF_MAP.md  NEXT_DIALOG_EXPERIMENT_RESTRUCTURE.md  OPTIONAL_PATCH_PLAN.md  PAPER_CODE_CONSISTENCY_MATRIX.md  PAPER_CODE_CONSISTENCY_REPORT.md  PATCH1_REPORT.md  PATCH2_REPORT.md  PATCH3_REPORT.md  PATCH5_REPORT.md  PROJECT_ONBOARDING_REPORT.md  PROJECT_STRUCTURE.md  Q13_Q15_LEAN_CONCLUSION_CODE_CONSISTENCY_PATCH_REPORT.md  Q1_FIVE_POINT_SIGN_FIX_REPORT.md  Q1_Q7_GPT55_REVIEW_REPORT.md  Q2_FFT9_RAW_DENOMINATOR_FIX_REPORT.md  Q3_FFT9_FOURTH_ORDER_SYMBOL_CONSISTENCY_REPORT.md  Q4_FFT9_NONHOM_DIRICHLET_SIGN_SYSTEM_REPORT.md  Q5_THREE_PARAMETER_FFT9_SIXTH_ORDER_SCOPE_REPORT.md  Q8_Q9_GMRES_KRYLOV_PATCH_REPORT.md  (+8 more)
code/: README.md
code/cpp/: CMakeLists.txt  gmres.hpp  main.cpp
codex_prompts/: RUN_ALL_AUDITS.md
extracts/: 355853.355859.txt  355853.355865.txt  Cyclic_Reduction_extracted.txt  GMRES_full_text.txt  (+7 more)
(+157 files in other folders)
